# tasker_shiv_python_single_exec_demo

./: Makefile  README.md  pyproject.toml
demo/: __main__.py
